Fixed margin on mobile version

--- a/Public/css/main.css
+++ b/Public/css/main.css
@@ -622,7 +622,6 @@ main {
 
 .menu-top {
   width: 100%;
-  max-width: 425px;
   height: 225px;
   display: flex;
   justify-content: center;
@@ -631,18 +630,16 @@ main {
   box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.1);
 }
 .menu-top img {
-  height: 225px;
+  width: 100%;
   transform: scale(1.26);
 }
 .menu-top .tep-menu-img {
   position: relative;
   top: 20px;
-  width: auto;
-  transform: scale(2.4);
+  transform: scale(1.5);
 }
 .menu-top .leg-menu-img {
-  height: 225px;
-  transform: scale(1.3);
+  transform: scale(1);
 }
 @media screen and (min-width: 769px) {
   .menu-top {
@@ -734,7 +731,6 @@ main {
   flex-flow: row nowrap;
   justify-content: space-between;
   width: 95%;
-  max-width: 400px;
   margin-top: 20px;
   background-color: white;
   border-radius: 20px;
