--- a/Public/css/prefixed/main.css
+++ b/Public/css/prefixed/main.css
@@ -861,7 +861,6 @@ main {
 
 .menu-top {
   width: 100%;
-  max-width: 425px;
   height: 225px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -877,7 +876,7 @@ main {
           box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.1);
 }
 .menu-top img {
-  height: 225px;
+  width: 100%;
   -webkit-transform: scale(1.26);
       -ms-transform: scale(1.26);
           transform: scale(1.26);
@@ -885,16 +884,14 @@ main {
 .menu-top .tep-menu-img {
   position: relative;
   top: 20px;
-  width: auto;
-  -webkit-transform: scale(2.4);
-      -ms-transform: scale(2.4);
-          transform: scale(2.4);
+  -webkit-transform: scale(1.5);
+      -ms-transform: scale(1.5);
+          transform: scale(1.5);
 }
 .menu-top .leg-menu-img {
-  height: 225px;
-  -webkit-transform: scale(1.3);
-      -ms-transform: scale(1.3);
-          transform: scale(1.3);
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
 }
 @media screen and (min-width: 769px) {
   .menu-top {
@@ -929,7 +926,6 @@ main {
   top: -25px;
   background-color: #F6F6F6;
   width: 100%;
-  max-width: 425px;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
   -webkit-box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.1);
@@ -1024,7 +1020,6 @@ main {
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 95%;
-  max-width: 400px;
   margin-top: 20px;
   background-color: white;
   border-radius: 20px;
